# HTMDv2.2FW

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  README_ja.md
.github/: copilot-instructions.md
HTMDv2.2c-f303/: .mxproject  CMakeLists.txt  HTMDv2.2c-f303.ioc  Makefile  write.sh
HTMDv2.2c-f303k8/: .mxproject  HTMDv2.2c-f303k8.ioc  Makefile
HTMDv2.2c-g431/: .mxproject  CMakeLists.txt  HTMDv2.2c-g431.ioc  Makefile  STM32G431XX_FLASH.ld
HTMDv2.2sg431/: .mxproject  HTMDv2.2sg431.ioc  Makefile
common/: CMakeLists.txt
common/include/common/: config_defs.hpp
common/include/common/control/: acceleration_limiter.hpp  pid.hpp
common/include/common/core/: app.hpp
common/include/common/interfaces/: encoder_interface.hpp  gate_driver_interface.hpp  indicator_interface.hpp
common/include/common/logic/: can_protocol.hpp  motor_manager.hpp  state_machine.hpp
common/src/core/: app.cpp
common/src/logic/: motor_manager.cpp
docs/: CANv1.0.md  CANv2.0.md  CANv2.0MDClass.md  CANv2.0MDDataframe.md  CANv2.0MainClass.md  can_communication.md  can_communication_v2.0.md  can_v2.0.md  coding-rules.md
gn10_motor/: CMakeLists.txt  README.md  README_ja.md
gn10_motor/include/gn10_motor/: acceleration_limiter.hpp  i_encoder.hpp  i_gate_driver.hpp  motor_controller.hpp  pid.hpp
gn10_motor/include/gn10_motor/logic/: pid.hpp
gn10_motor/src/: motor_controller.cpp
targets/HTMDv2.2c-f303/app/: CMakeLists.txt
targets/HTMDv2.2c-f303/app/include/app/: a3921_gate_driver.hpp  app.hpp  incremental_encoder.hpp
targets/HTMDv2.2c-f303/app/src/: a3921_gate_driver.cpp  app.cpp  incremental_encoder.cpp
uml/: class.pu  class_simplified.pu  (+1 more)
(+234 files in other folders)
